media icons are not displayed correctly, header is not showing links in the correct way

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -24,13 +24,7 @@ header.innerHeader {
 }
 
 .media_icon {
+  position: left 2rem;
   height: 50px;
   width: 50px;
-  background-color: green;
-}
-
-.media_icon_false {
-  height: 50px;
-  width: 50px;
-  background-color: red;
 }
